@@ -1,8 +1,8 @@
 package view;
 
-import interfaceAdapters.SendMoveToApi.SendBoardToApiController;
-import interfaceAdapters.SendMoveToApi.SendBoardToApiState;
-import interfaceAdapters.SendMoveToApi.SendBoardToApiViewModel;
+import interfaceAdapters.sendBoardToApi.SendBoardToApiController;
+import interfaceAdapters.sendBoardToApi.SendBoardToApiState;
+import interfaceAdapters.sendBoardToApi.SendBoardToApiViewModel;
 import interfaceAdapters.legalMoves.LegalMovesController;
 import interfaceAdapters.legalMoves.LegalMovesState;
 import interfaceAdapters.legalMoves.LegalMovesViewModel;
@@ -92,9 +92,12 @@ public class BoardView implements PropertyChangeListener {
         } else {
             for (int move : legalMoves) {
                 Pane square = (Pane) chessBoard.getChildren().get(move);
-                square.getChildren().remove(square.getChildren().size() - 1);
+                square.getChildren().removeLast();
             }
-            if (clickedSquare != selectedSquare) {
+            if (clickedSquare == selectedSquare) {
+                selectedSquare = -1;
+                legalMoves = emptyList();
+            } else {
                 selectedSquare = clickedSquare;
                 legalMovesController.execute(selectedSquare);
             }
